--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
 streamlit
-google-generativeai
-graphviz
+pandas
+numpy
+scikit-learn
+joblib
+matplotlib
+seaborn
+xgboost
+lightgbm
+tensorflow
+openai
+keras
