--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
 streamlit
-diffusers
-transformers
-torch
-accelerate
-pillow
+pandas
+numpy
+scikit-learn
+joblib
+matplotlib
+seaborn
+xgboost
+lightgbm
+tensorflow
+openai
+keras
